examples/core/errors/06_unclosed_paren.core.tao
// Parse Error: Opening paren without closing
(42
